gcc-9 (9.2.1-7) UNRELEASED; urgency=medium

  * Drop the gcc-alpha-bs-ignore patch, apparently not necessary anymore.

 -- Matthias Klose <doko@debian.org>  Wed, 28 Aug 2019 19:16:33 +0200

gcc-9 (9.2.1-6) unstable; urgency=medium

  * Update to SVN 20190827 (r274974) from the gcc-9-branch.
    - Fix PR ipa/91508, PR ipa/91438, PR ipa/91404, PR lto/91287,
      PR target/91533 (x86), PR ipa/91508, PR ipa/91438, PR ipa/91404,
      PR c++/91521.
  * Backport LTO jobserver support (-flto=auto).
  * any_archs: Remove mips and powerpcspe, add riscv64.

 -- Matthias Klose <doko@debian.org>  Wed, 28 Aug 2019 01:01:47 +0200

gcc-9 (9.2.1-4) unstable; urgency=medium

  * Fix typo for gm2 enablement.
  * Disable gm2 on powerpc, ppc64, sh4, kfreebsd-i386, kfreebsd-amd64.
    See the build logs of 9.2.1-3 for the various issues.

 -- Matthias Klose <doko@debian.org>  Thu, 22 Aug 2019 12:12:07 +0200

gcc-9 (9.2.1-3) unstable; urgency=medium

  * Update to SVN 20190821 (r274792) from the gcc-9-branch.
    - Fix PR rtl-optimization/91347, PR target/91386 (AArch64).

  [ Aurelien Jarno ]
  * Enable Ada on riscv64.

  [ Matthias Klose ]
  * Build the gm2 packages except on powerpc and x32.
  * Update gm2 cross build dependencies.
  * Fix gm2 build with -j32.
  * Configure with --enable-libpth-m2 for gm2 cross builds.
  * Configure --without-target-system-zlib for gdc cross builds.
  * Remove not needed libpth-dev dependency for gm2 packages.
  * Ignore M2Version.o for gm2 bootstrap comparison.
  * Update gm2 from the gcc_9_2_0_gm2 branch 20190820.

 -- Matthias Klose <doko@debian.org>  Wed, 21 Aug 2019 12:15:27 +0200

gcc-9 (9.2.1-2) unstable; urgency=medium

  [ Matthias Klose ]
  * Update to SVN 20190819 (r274667) from the gcc-9-branch.
    - Fix PR c++/90947, PR c++/91436, PR fortran/87991, PR fortran/90563,
      PR fortran/88072, PR fortran/90561, PR fortran/89647, PR fortran/87993,
      PR tree-optimization/91109, PR tree-optimization/91109,