@@ -10,13 +10,25 @@
 
 --- a/src/libgomp/omp.h.in
 +++ b/src/libgomp/omp.h.in
-@@ -40,8 +40,13 @@ typedef struct
+@@ -40,8 +40,25 @@ typedef struct
  
  typedef struct
  {
-+#if defined(__linux__)
++  /*
++    Derive OMP_NEST_LOCK_SIZE and OMP_NEST_LOCK_ALIGN, don't hard
++    code the values because the header is used for all multilibs.
++    OMP_NEST_LOCK_SIZE  = @OMP_NEST_LOCK_SIZE@
++    OMP_NEST_LOCK_ALIGN = @OMP_NEST_LOCK_ALIGN@
++  */
++#if defined(__linux__) && !(defined(__hppa__) || defined(__alpha__))
 +  unsigned char _x[8 + sizeof (void *)] 
 +    __attribute__((__aligned__(sizeof (void *))));
++  #if @OMP_NEST_LOCK_SIZE@ != 8 + sizeof (void *)
++    #warning "wrong value for OMP_NEST_LOCK_SIZE"
++  #endif
++  #if @OMP_NEST_LOCK_ALIGN@ != sizeof (void *)
++    #warning "wrong value for OMP_NEST_LOCK_ALIGN"
++  #endif
 +#else
    unsigned char _x[@OMP_NEST_LOCK_SIZE@] 
      __attribute__((__aligned__(@OMP_NEST_LOCK_ALIGN@)));
