@@ -1265,6 +1265,11 @@ endif
 	fi; \
 	test $$s -eq 0
 
+	for h in $$(find $(builddir) -name omp.h); do \
+	  echo "=================== OMP_H HEADER $$h ======================   "; \
+	  cat $$h; \
+	done
+
 	if [ -f $(srcdir)/contrib/warn_summary ]; then \
 	  rm -f bootstrap-summary; \
 	  /bin/sh $(srcdir)/contrib/warn_summary bootstrap-protocol \
