@@ -1,6 +1,9 @@
 gcc-9 (9.2.1-7) UNRELEASED; urgency=medium
 
   * Drop the gcc-alpha-bs-ignore patch, apparently not necessary anymore.
+  * For the omp.h header, use the configured OMP_NEST_LOCK_SIZE and
+    OMP_NEST_LOCK_ALIGN values for some non-multilib architectures.
+    Closes: #935750.
 
  -- Matthias Klose <doko@debian.org>  Wed, 28 Aug 2019 19:16:33 +0200
 
